--- a/src/app/music-store/artist-detail/artist-detail.component.html
+++ b/src/app/music-store/artist-detail/artist-detail.component.html
@@ -13,7 +13,6 @@
                 style="font-weight: 700;color: #4caf50;font-size: 20px;">Genres: </span>
             {{returnGenres(item.genres)}}
         </p>
- 
     </div>
  
     <div *ngIf="artistsList && artistsList.length == 0" style="text-align: center;">
@@ -23,5 +22,5 @@
 </div>
  
 <div *ngIf="artistsList && artistsList.length > 0">
-    <app-track-detail [topTrack]="topTrack"></app-track-detail>
+    <app-track-detail [topTrack]="topTrack" [artistsList]='artistsList' [index]='indexOfArtist'></app-track-detail>
 </div>
