--- a/src/app/music-store/playlists/playlists.component.html
+++ b/src/app/music-store/playlists/playlists.component.html
@@ -10,7 +10,7 @@
         </p>
     </div>
  
-    <div *ngIf="playList && playList.length == 0" style="text-align: center;">
+    <div *ngIf="clickInformation.isClickSearch && playList && playList.length == 0" style="text-align: center;">
         <h5 style="color: red;">No Data For Your Current Playlist</h5>
     </div>
  
