add constand and removed inline css in music store

--- a/src/app/music-store/music-store.component.html
+++ b/src/app/music-store/music-store.component.html
@@ -1,9 +1,10 @@
-<div class="container" style="text-align: center">
-    <h1 >Music Store</h1>
-    <div style="width: 90%; margin: 0 auto;">
+<div class="container text-center">
+    <h1>Music Store</h1>
+    <div class="search-box">
         <div class="row">
-            <div  style="display: contents;">
-                <select class="select-reponsive" [(ngModel)]="selectedTypeSearch" (change)="changeType()" style="border-radius: 8px;">
+            <div class="search-box__container">
+                <select class="select-reponsive search-box__container__select" [(ngModel)]="selectedTypeSearch"
+                    (change)="changeType()">
                     <option *ngFor="let o of options">{{o.name}}</option>
                 </select>
             </div>
@@ -11,15 +12,16 @@
                 <input [appHighlight]="returnColor(contactForm.get('name'))" type="text" class="form-control" id="name"
                     placeholder="Typing Your Characters To Search" formControlName="name" />
             </form>
-            <div class="col-12 col-sm-2 col-md-3 col-lg-3" style="display: contents;">
-                <button class="button-reponsive btn btn-success" (click)="searchMusic()" [disabled]="isDiableSearchButton()"
-                    type="submit" style="margin-right: 12px;">Search</button>
-                <button *ngIf="!accessToken || tokenExprise" class="btn btn-warning" type="button" (click)="getNewToken()">Get Token</button>
+            <div class="col-12 col-sm-3 col-md-3 col-lg-3 display-content">
+                <button class="button-reponsive btn btn-success margin-r-12" (click)="searchMusic()"
+                    [disabled]="isDiableSearchButton()" type="submit">Search</button>
+                <button *ngIf="!accessToken || tokenExprise" class="button-reponsive btn btn-warning" type="button"
+                    (click)="getNewToken()">Get Token</button>
             </div>
         </div>
 
-        <div *ngIf="contactForm.get('name')?.invalid && contactForm.get('name')?.touched"
-            style="display: contents;color: red;">
+        <div class="error-validation-container"
+            *ngIf="contactForm.get('name')?.invalid && contactForm.get('name')?.touched">
 
             <div *ngIf="contactForm.get('name')?.errors?.['required']">
                 Name is required.
@@ -31,15 +33,15 @@
 
     </div>
 
-    <div *ngIf="!accessToken" style="text-align: center;margin-top: 2%;">
-        <p style="color: red;">
-            Dont have Token. Pls click Get Token
+    <div class="token-container" *ngIf="!accessToken">
+        <p class="color-red">
+            You Don't Have Token. Please Click Get Token!
         </p>
     </div>
 
-    <div *ngIf="tokenExprise" style="text-align: center;margin-top: 2%;">
-        <p style="color: red;">
-            The token expired. Pls click Get Token
+    <div class="token-container" *ngIf="tokenExprise">
+        <p class="color-red">
+            The Token Expired. Please Click Get Token!
         </p>
     </div>
 
