--- a/src/app/music-store/artist-detail/track-detail/track-detail.component.html
+++ b/src/app/music-store/artist-detail/track-detail/track-detail.component.html
@@ -1,7 +1,7 @@
 <button *ngIf="tracks && tracks.length > 0 &&( (artistsList && artistsList.length > 0)||(tracksList && tracksList.length > 0))" class="btn btn-warning" style="margin-bottom: 2%;" (click)="backList()">Back</button>
 <div class="container row">
-    <div class="col-sm-6 col-md-4 col-lg-3" *ngFor="let item of tracks" style="margin-bottom: 10px;">
-        <div class="card" style="width: 13rem;">
+    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3" *ngFor="let item of tracks" style="margin-bottom: 10px;">
+        <div class="card" style="width: 15rem;">
             <img class="card-img-top" src="{{item.album && item.album.images[1] && item.album.images[1].url}}"
                 alt="link erro">
             <div class="card-body">
