--- a/src/app/music-store/playlists/playlists.component.html
+++ b/src/app/music-store/playlists/playlists.component.html
@@ -1,19 +1,18 @@
-<div class="row" style="margin-top: 2%;justify-content: center;">
-    <div class="col-lg-3"  *ngFor="let item of playList; let i=index" style="margin-bottom: 2%;"
+<div class="row playlist-container">
+    <div class="playlist-reponsive col-xl-6 margin-b-2" *ngFor="let item of playList; let i=index"
         [ngStyle]="{ display: item.display ? 'block': 'none'}" (click)='viewListDetail(item,i)'>
-        <img src="{{item.images[1] && item.images[1].url}}" alt="link erro"
-            style="border-radius: 50%;width: 300px;height: 300px;">
-        <h5 style="font-weight: bold;color: #1855ff;margin-top: 2%;margin-bottom: 0;">{{item.name}}</h5>
-        <p style="margin-bottom: 0;font-weight: 600;"> <span
-                style="font-weight: 700;color: red;font-size: 20px;">Total Tracks: </span>
+        <img class="image-playlist" src="{{item.images[1] && item.images[1].url}}" alt="link erro">
+        <h5 class="title">{{item.name}}</h5>
+        <p class="total-text"> <span class="total-text__span">Total Tracks: </span>
             {{item.tracks.total}}
         </p>
     </div>
- 
-    <div *ngIf="clickInformation.isClickSearch && clickInformation.isTypeCurrentList && playList && playList.length == 0" style="text-align: center;">
-        <h5 style="color: red;">No Data For Your Current Playlist</h5>
+
+    <div class="text-center" *ngIf="clickInformation.isClickSearch && clickInformation.isTypeCurrentList && playList && playList.length == 0">
+        <h5 class="color-red">No Data For Your Current Playlist</h5>
     </div>
- 
+
 </div>
 
-<app-track-detail *ngIf="playlists && playlists.length > 0" [tracksList]="tracksList" [playlists]='playlists' [indexOfPlaylist]='indexOfPlaylist'></app-track-detail>
+<app-track-detail *ngIf="playlists && playlists.length > 0" [tracksList]="tracksList" [playlists]='playlists'
+    [indexOfPlaylist]='indexOfPlaylist'></app-track-detail>
