--- a/src/app/music-store/artist-detail/track-detail/track-detail.component.html
+++ b/src/app/music-store/artist-detail/track-detail/track-detail.component.html
@@ -1,13 +1,13 @@
-<button *ngIf="tracks && tracks.length > 0 &&( (artistsList && artistsList.length > 0)||(tracksList && tracksList.length > 0))" class="btn btn-warning" style="margin-bottom: 2%;" (click)="backList()">Back</button>
+<button *ngIf="tracks && tracks.length > 0 &&( (artistsList && artistsList.length > 0)||(tracksList && tracksList.length > 0))" class="btn btn-warning margin-b-2" (click)="backList()">Back</button>
 <div class="container row">
-    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3" *ngFor="let item of tracks" style="margin-bottom: 10px;">
-        <div class="card" style="width: 15rem;">
+    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 margin-b-10" *ngFor="let item of tracks">
+        <div class="card card__width">
             <img class="card-img-top" src="{{item.album && item.album.images[1] && item.album.images[1].url}}"
                 alt="link erro">
             <div class="card-body">
-                <p class="card-title" style="font-weight: bold;color: #1855ff;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;margin-bottom: 0;">{{item.name}}</p>
-                <p class="card-text" style="margin-bottom: 10px;">Type: {{item.type}}</p>
-                <audio controls style="width: 100%;margin-bottom: 10px;">
+                <p class="card-title card-title__style">{{item.name}}</p>
+                <p class="card-text margin-b-10">Type: {{item.type}}</p>
+                <audio class="audio__style" controls>
                     <source src="{{item.preview_url}}" type="audio/ogg">
                 </audio>
                 <a href='{{item.external_urls.spotify}}' class="btn btn-primary">Go to Spotify</a>
